--- a/SampleEmployeeProject/appsettings.json
+++ b/SampleEmployeeProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=my_user;Password=my_password;Database=my_database;"
+  }
 }
